# mlex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md  __init__.py  build_and_publish.py  pyproject.toml  requirements-cpu.txt  requirements.txt
.github/workflows/: publish.yml
examples/: example_export_latex.ipynb  example_metrics.py  example_pipeline.py  example_pipeline_pcpe.py  example_plots.py  example_sequence_analizer.py  example_sorter.py  preprocess_data_eyestate.py  preprocess_data_eyestate_split.py  preprocess_data_eyestate_split_sequence_clustering.py  preprocess_data_eyestate_split_temporal.py  preprocess_data_ozone.py  preprocess_data_physionet.py  preprocess_newdata_pcpe.py
experiments/: Exploratory.ipynb  bilstm_tsne.py  gru_tsne.py  lstm_tsne.py  rnn_tsne.py  testing_pipeline.ipynb
experiments/MLP/: mlp_exp.py  pcpe_mlp_exp.py
experiments/RandomForest/: pcpe_random_forest_exp.py  random_forest_exp.py
experiments/benchmarks/eye_detection/: exploratory_dataset_benchmark.ipynb
experiments/benchmarks/eye_detection/BILSTM/: dataset_benchmark_bilstm.py  dataset_benchmark_bilstm_ci.py  dataset_benchmark_bilstm_ci_sequenceclustering.py  generate_plots_with_ci.py  nohup.out
experiments/benchmarks/eye_detection/BILSTM_inverted_dataset/: dataset_benchmark_bilstm_ci.py  generate_plots_with_ci.py
experiments/benchmarks/eye_detection/GRU/: dataset_benchmark_gru.py  dataset_benchmark_gru_ci.py  dataset_benchmark_gru_ci_feature_context.py  dataset_benchmark_gru_ci_sequenceclustering.py  dataset_benchmark_gru_clusters.py  dataset_benchmark_gru_pipeline.py  generate_plots_with_ci.py  generate_plots_with_ci_context_feature.py  nohup.out  plots_with_differentes_clusters_algorithms.py
experiments/benchmarks/eye_detection/LSTM/: dataset_benchmark_lstm.py  dataset_benchmark_lstm_ci.py  dataset_benchmark_lstm_ci_feature_context.py  dataset_benchmark_lstm_ci_sequenceclustering.py  dataset_benchmark_lstm_clusters.py  dataset_benchmark_lstm_pipeline.py  generate_plots_with_ci.py  generate_plots_with_ci_context_feature.py  nohup.out  plots_with_differentes_clusters_algorithms.py
experiments/benchmarks/eye_detection/MLP/: mlp_experiment.py
experiments/benchmarks/eye_detection/RANDOM_FLOREST/: random_forest_exp_grid_search.py
experiments/benchmarks/eye_detection/RNN/: dataset_benchmark_rnn.py  dataset_benchmark_rnn_ci.py  dataset_benchmark_rnn_ci_feature_context.py  dataset_benchmark_rnn_ci_sequenceclustering.py  dataset_benchmark_rnn_pipeline.py  generate_plots_with_ci.py  generate_plots_with_ci_context_feature.py  nohup.out  plots_with_differentes_clusters_algorithms.py
experiments/nn_models_without_cnab/: gru.py  lstm.py  pcpe_gru.py  pcpe_lstm.py  pcpe_rnn.py  rnn.py
experiments/notebooks/: using_classes.ipynb
experiments/pcpe4/: exploratory.ipynb
experiments/pcpe4/BILSTM/: generate_plots_with_ci.py  pcpe_bilstm_ci.py
experiments/pcpe4/GRU/: generate_plots_with_ci.py  pcpe_gru_ci.py
experiments/pcpe4/LSTM/: generate_plots_with_ci.py  pcpe_lstm_ci_in.py  pcpe_lstm_ci_out.py
experiments/pcpe4/RNN/: generate_plots_with_ci.py  pcpe_rnn_ci_in.py  pcpe_rnn_ci_out.py
experiments/pcpe4/markov/: markov.py
experiments/pcpe4/mutual_information/: mutual_information.py
mlex/: __init__.py  cli.py
mlex/analysis/: __init__.py  markov_analyzer.py  sequence_analyzer_plotter.py  sequence_span_analyzer.py
mlex/evaluation/: __init__.py  evaluator.py  plotter.py  threshold.py  utils.py
mlex/features/: __init__.py  columns.py  sequences.py
mlex/models/: __init__.py  bigru.py  bilstm.py  birnn.py  composite.py  gru.py  lstm.py  mlp.py  models.py  random_forest.py  rnn.py
mlex/models/base_components/: bigru_base_model.py  bilstm_base_model.py  birnn_base_model.py  gru_base_model.py  lstm_base_model.py  rnn_base_model.py
mlex/pipelines/: simple_pipeline.py
mlex/plots/: __init__.py
mlex/publications/lacci2024/: analysis.ipynb  analysis.py  experiment.py  experiment_comparing_data1.py
mlex/torch_modules/: __init__.py  composite.py  models.py
mlex/utils/: __init__.py  analysis.py  context_aware.py  datareader.py  equal_features.py  network_strategy.py  preprocessing.py  schema.py  sorter.py  split.py  utils.py
publications/cbic2025/: experiment.py  experiment_GRU.py  experiment_LSTM.py  experiment_RNN.py  generate_plots.py  generate_plots_with_ci.py  testando_ruido.ipynb
publications/complenet2025/visualization/: network_visualization.ipynb
publications/lacci2024/: analysis.ipynb  experiment.py  experiment_RNN_pcpe01.py  experiment_comparing_data1.py  plotter.py  script.py
publications/lacci2025/: testing.ipynb
test/: __init__.py
tests/: test_base.py  test_network_strategy.py  test_sorter.py  test_threshold.py
tests/data/: __init__.py  sort_fixtures.py
visualization/: analysing_data_pcpe.ipynb  analysis_test.ipynb  calculate_network_metrics.py  communities_manager.py  create_random_networks.py  create_rr_phi_network.py  dataset-analytics.py  directed_graph_test.py  graphapplication_by_cpf_cnpj_titular.py  metrics_confidence_interval.ipynb  mitagate_egocentric_nodes.py  network_communities.ipynb  network_metrics_evaluation.py  network_plotter.py  network_statistical_analysis.py  network_typologies.py  test.py
(+3 files in other folders)
