[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlex"
version = "0.1.0"
description = "Money Laundering Expert System - A machine learning framework for financial fraud detection"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Diego Pinheiro", email = "your-email@example.com"}
]
maintainers = [
    {name = "Diego Pinheiro", email = "your-email@example.com"}
]
keywords = ["machine-learning", "fraud-detection", "financial", "neural-networks", "gru", "lstm", "rnn"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "torch>=1.9.0",
    "tensorflow>=2.8.0",
    "keras>=2.8.0",
    "networkx>=2.6.0",
    "fastavro>=1.4.0",
    "pyarrow>=7.0.0",
    "shap>=0.40.0",
    "skorch>=0.11.0",
    "ipykernel>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=2.15.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "myst-parser>=0.17.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mlex"
Documentation = "https://mlex.readthedocs.io"
Repository = "https://github.com/yourusername/mlex"
"Bug Tracker" = "https://github.com/yourusername/mlex/issues"

[project.scripts]
mlex = "mlex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlex*"]

[tool.setuptools.package-data]
mlex = ["*.txt", "*.md", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 