[build-system]
requires = ["setuptools", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mlex-lib"
dynamic = ["version"]
authors = [
    {name = "Diego Pinheiro", email = "diegompin@gmail.com"}
]
description = "Money Laundering Expert System - A machine learning framework for financial fraud detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["machine-learning", "fraud-detection", "financial", "neural-networks", "gru", "lstm", "rnn"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License", 
  "Operating System :: OS Independent",
]


dependencies = [
    "matplotlib~=3.10.8",
    "networkx~=3.4.2",
    "numpy~=2.2.6",
    "pandas~=2.3.3",
    "pyarrow~=18.1.0",
    "pydantic~=2.13.0",
    "scikit-learn~=1.7.2",
    "scipy~=1.15.3",
    "seaborn~=0.13.2",
    "tqdm~=4.67.3",
]

[project.optional-dependencies]
torch = [
    "torch~=2.10.0",
]
notebook = [
    "ipykernel~=7.2.0",
]
dev = [
    "mlex-lib[torch,notebook]",
    "parameterized~=0.9.0",
    "shap~=0.49.1",
]
all = [
    "mlex-lib[dev]",
]


[project.urls]
Homepage = "https://github.com/dpinlab/mlex"
"Bug Tracker" = "https://github.com/dpinlab/mlex/issues"


[tool.setuptools.packages.find]
include = ["mlex", "mlex.*"]


[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"